# majik-obfuscate

./: .gitignore  .pylintrc  Makefile  README.rst  pyproject.toml  setup.cfg  tox.ini
scripts/: inidump.py
src/lib/majik/obfuscate/: __init__.py  common_exe.py  obcat.py  obwrite.py
tests/: common.py  test_corruption.py  test_lib.py
