[metadata]
name = majik-obfuscate
version = 0.1
description = Data obfuscation library
long_description = file: README.rst
keywords = obfuscation
license = Apache 2.0
license_file = LICENSE
author = Shawn Michael
author_email = python@monkeyspunk.net
maintainer = Shawn Michael
maintainer_email = python@monkeyspunk.net
url = https://oss.majikindustries.com/python/majik-obfuscate/
classifiers =
	Development Status :: 4 - Beta
	Environment :: No Input/Output (Daemon)
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: System :: Monitoring

[options]
zip_safe = True
include_package_data = False
package_dir=
	=src/lib
packages = find_namespace:
install_requires = pycryptodomex

[options.entry_points]
console_scripts =
	obcat=majik.obfuscate.obcat:main
	obwrite=majik.obfuscate.obwrite:main

[options.packages.find]
where = src/lib

[flake8]
max-line-length = 79
extend-ignore = E203

[pylint.FORMAT]
max-line-length = 79

[pylint.messages control]
disable = C0330, C0326

; vim: filetype=dosini:
