[metadata]
name = majik-obfuscate
version = 1.0.0
description = Data obfuscation library
long_description = A library and accompanying command line utilities used to
	obfuscate sensitive data.  It's primary purpose is to obfuscate those
	passwords required for automated systems to do their job.
keywords = obfuscation password storage
license = Apache 2.0
license_file = LICENSE
author = Shawn Michael
author_email = python@monkeyspunk.net
maintainer = Shawn Michael
maintainer_email = python@monkeyspunk.net
url = https://oss.majikindustries.com/python/majik-obfuscate/
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Security
	Topic :: System :: Systems Administration
	Topic :: Utilities

[options]
zip_safe = True
include_package_data = False
package_dir=
	=src/lib
packages = find_namespace:
install_requires = pycryptodomex

[options.entry_points]
console_scripts =
	obcat=majik.obfuscate.obcat:main
	obwrite=majik.obfuscate.obwrite:main

[options.packages.find]
where = src/lib

[flake8]
max-line-length = 79
#extend-ignore = E203

[pylint.FORMAT]
max-line-length = 79

[pylint.messages control]
#disable = C0330, C0326

; vim: filetype=dosini:
